web-app: fix z-index in header

--- a/web-app/src/layout/index.less
+++ b/web-app/src/layout/index.less
@@ -25,6 +25,9 @@
 .ffa-frame .frame-content {
   padding: 24px;
 }
+.frame-nav {
+  z-index: 900 !important;
+}
 
 .ffa-main {
   height: 100%;
